<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:scrollbars="none"
    android:id="@+id/add_customer_fragment_layout_ID"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_customer_name"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/et_hint_customer_name"
            android:background="@drawable/edit_text_layout_bg"
            android:layout_height="45dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:paddingLeft="30dp"
            android:textColorHint="@color/colorBlack"
            android:textStyle="normal"
            android:inputType="text"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_layout_bg"
            android:layout_height="45dp">



            <Spinner
                android:id="@+id/sp_customer_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:paddingLeft="20dp"
                android:textSize="13sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginRight="25dp"
                android:background="@android:color/transparent"
                android:entries="@array/sp_add_customer_type"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <ProgressBar
                android:id="@+id/pb_customer_type"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/black"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <!--                -->
            <ImageView
                android:id="@+id/img_customer_type"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:src="@drawable/bottom_icon" />


        </RelativeLayout>

        <EditText
            android:id="@+id/et_contact_person"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/et_hint_contact_person"
            android:background="@drawable/edit_text_layout_bg"
            android:layout_height="45dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:paddingLeft="30dp"
            android:textColorHint="@color/colorBlack"
            android:textStyle="normal"
            android:inputType="text"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/btn_back"
                android:paddingTop="0dp"
                android:text="@string/header_contact_details"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <ImageButton
                android:id="@+id/btn_back"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_alignParentLeft="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/phone_ring_icon"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/et_telephone_number"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/et_hint_telephone_number"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/edit_text_layout_bg"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:paddingLeft="30dp"
            android:textColorHint="@color/colorBlack"
            android:textStyle="normal"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_email_address"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/et_hint_email_address"
            android:background="@drawable/edit_text_layout_bg"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:paddingLeft="30dp"
            android:textColorHint="@color/colorBlack"
            android:textStyle="normal"
            android:inputType="text"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/btn_back2"
                android:paddingTop="0dp"
                android:text="@string/header_location_details"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <ImageButton
                android:id="@+id/btn_back2"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_alignParentLeft="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/location_icon"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_layout_bg"
            android:layout_height="45dp">



            <Spinner
                android:id="@+id/sp_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:paddingLeft="20dp"
                android:textSize="13sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginRight="25dp"
                android:background="@android:color/transparent"
                android:entries="@array/sp_add_customer_area"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <ProgressBar
                android:id="@+id/pb_area"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/black"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <!--                -->
            <ImageView
                android:id="@+id/img_area"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:src="@drawable/bottom_icon" />


        </RelativeLayout>

        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/et_hint_location"
            android:background="@drawable/edit_text_layout_bg"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:paddingLeft="30dp"
            android:textColorHint="@color/colorBlack"
            android:textStyle="normal"
            android:inputType="text"
            android:singleLine="true" />


        <Button
            android:id="@+id/btn_save"
            android:layout_gravity="right"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="0dp"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn_bg"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />


    </LinearLayout>

</ScrollView>