<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@android:color/white">


    <ImageView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:src="@drawable/delivery_logo"
        android:layout_height="150dp"/>

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:text="Sign In"
        android:textSize="40sp"
        android:layout_marginTop="0dp"
        android:textColor="@color/colorGrey"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <EditText
            android:focusable="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/login_username"
            android:background="@drawable/edit_text_bg"
            android:layout_marginTop="5dp"
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/user_icon_2"
            android:drawablePadding="5dp"
            android:textColorHint="@color/colorGrey"
            android:padding="10dp"
            android:singleLine="true"
            android:textStyle="bold"
            />

        <EditText
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/login_password"
            android:background="@drawable/edit_text_bg"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:id="@+id/et_password"
            android:drawableLeft="@drawable/lock_icon_2"
            android:drawablePadding="5dp"
            android:textColorHint="@color/colorGrey"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />


        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="67dp">


            <RelativeLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/login_btn_bg"
                android:padding="0dp"
                android:textStyle="bold"
                android:text="@string/login_sign_in"
                android:textAllCaps="true"
                android:textColor="@android:color/white">

                <TextView
                    android:id="@+id/btn_label_status"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:text="@string/login_sign_in"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <ProgressBar
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:layout_alignParentBottom="true"
                android:id="@+id/pb_sign_in_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/white"
                android:visibility="gone" />

        </RelativeLayout>







    </LinearLayout>





</LinearLayout>